// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should correctly infer types for complex expressions 1`] = `
{
  "dependencies": [
    "numField",
  ],
  "sql": "("num_col" + "num_col")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should correctly infer types for complex expressions 2`] = `
{
  "dependencies": [
    "textField",
  ],
  "sql": "("text_col" || "text_col")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should correctly infer types for complex expressions 3`] = `
{
  "dependencies": [
    "textField",
    "numField",
  ],
  "sql": "("text_col" || "num_col")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should correctly infer types for complex expressions 4`] = `
{
  "dependencies": [
    "numField",
    "textField",
  ],
  "sql": "("num_col" || "text_col")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should correctly infer types for complex expressions 5`] = `
{
  "dependencies": [
    "boolField",
    "numField",
  ],
  "sql": "("bool_col" + "num_col")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should correctly infer types for complex expressions 6`] = `
{
  "dependencies": [
    "dateField",
    "textField",
  ],
  "sql": "("date_col" || "text_col")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for "test string" 1`] = `
{
  "dependencies": [],
  "sql": "'test string'",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for ({fld1} + {fld2}) 1`] = `
{
  "dependencies": [
    "fld1",
    "fld2",
  ],
  "sql": "(("column_a" || "column_b"))",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} != {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" <> "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} % {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" % "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} & {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" & "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} * {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" * "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} / {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" / "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} < {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" < "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} <= {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" <= "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} <> {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": ""column_a"",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} = {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" = "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} > {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" > "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} >= {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" >= "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld1} - {fld3} 1`] = `
{
  "dependencies": [
    "fld1",
    "fld3",
  ],
  "sql": "("column_a" - "column_c")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld5} && {fld1} > 0 1`] = `
{
  "dependencies": [
    "fld5",
    "fld1",
  ],
  "sql": "("column_e" AND ("column_a" > 0))",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for {fld5} || {fld1} > 0 1`] = `
{
  "dependencies": [
    "fld5",
    "fld1",
  ],
  "sql": "("column_e" OR ("column_a" > 0))",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for -{fld1} 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "(-"column_a")",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for 3.14 1`] = `
{
  "dependencies": [],
  "sql": "3.14",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for 42 1`] = `
{
  "dependencies": [],
  "sql": "42",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for FALSE 1`] = `
{
  "dependencies": [],
  "sql": "FALSE",
}
`;

exports[`Generated Column Query End-to-End Tests > Advanced Tests > should handle visitor method for TRUE 1`] = `
{
  "dependencies": [],
  "sql": "TRUE",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function CREATED_TIME() for PostgreSQL 1`] = `
{
  "dependencies": [],
  "sql": "__created_time__",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function DAY({fld6}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "EXTRACT(DAY FROM "column_f"::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function DAY({fld6}) for SQLite 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "CAST(STRFTIME('%d', \`column_f\`) AS INTEGER)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function HOUR({fld6}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "EXTRACT(HOUR FROM "column_f"::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function HOUR({fld6}) for SQLite 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "CAST(STRFTIME('%H', \`column_f\`) AS INTEGER)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function IS_SAME({fld6}, NOW(), "day") for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "DATE_TRUNC('day', "column_f"::timestamp) = DATE_TRUNC('day', NOW()::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function LAST_MODIFIED_TIME() for PostgreSQL 1`] = `
{
  "dependencies": [],
  "sql": "__last_modified_time__",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function MINUTE({fld6}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "EXTRACT(MINUTE FROM "column_f"::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function MINUTE({fld6}) for SQLite 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "CAST(STRFTIME('%M', \`column_f\`) AS INTEGER)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function MONTH({fld6}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "EXTRACT(MONTH FROM "column_f"::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function MONTH({fld6}) for SQLite 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "CAST(STRFTIME('%m', \`column_f\`) AS INTEGER)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function SECOND({fld6}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "EXTRACT(SECOND FROM "column_f"::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function SECOND({fld6}) for SQLite 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "CAST(STRFTIME('%S', \`column_f\`) AS INTEGER)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function TODAY() for PostgreSQL 1`] = `
{
  "dependencies": [],
  "sql": "CURRENT_DATE",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function TODAY() for SQLite 1`] = `
{
  "dependencies": [],
  "sql": "DATE('now')",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function WEEKDAY({fld6}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "EXTRACT(DOW FROM "column_f"::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function WEEKNUM({fld6}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "EXTRACT(WEEK FROM "column_f"::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function WORKDAY({fld6}, 5) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": ""column_f"::date + INTERVAL '1 day' * 5::integer",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function WORKDAY_DIFF({fld6}, NOW()) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "NOW()::date - "column_f"::date",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function YEAR({fld6}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "EXTRACT(YEAR FROM "column_f"::timestamp)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Date Functions > should convert date function YEAR({fld6}) for SQLite 1`] = `
{
  "dependencies": [
    "fld6",
  ],
  "sql": "CAST(STRFTIME('%Y', \`column_f\`) AS INTEGER)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function ABS({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "ABS("column_a"::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function ABS({fld1}) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "ABS(\`column_a\`)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function CEILING({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CEIL("column_a"::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function CEILING({fld1}) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CAST(CEIL(\`column_a\`) AS INTEGER)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function EVEN({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CASE WHEN "column_a"::integer % 2 = 0 THEN "column_a"::integer ELSE "column_a"::integer + 1 END",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function EXP({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "EXP("column_a"::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function EXP({fld1}) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "EXP(\`column_a\`)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function FLOOR({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "FLOOR("column_a"::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function FLOOR({fld1}) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CAST(FLOOR(\`column_a\`) AS INTEGER)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function INT({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "FLOOR("column_a"::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function LOG({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "LN("column_a"::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function LOG({fld1}) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "LN(\`column_a\`)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function MOD({fld1}, 3) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "MOD("column_a"::numeric, 3::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function MOD({fld1}, 3) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "(\`column_a\` % 3)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function ODD({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CASE WHEN "column_a"::integer % 2 = 1 THEN "column_a"::integer ELSE "column_a"::integer + 1 END",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function POWER({fld1}, 2) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "POWER("column_a"::numeric, 2::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function POWER({fld1}, 2) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "POWER(\`column_a\`, 2)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function ROUNDDOWN({fld1}, 1) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "FLOOR("column_a"::numeric * POWER(10, 1::integer)) / POWER(10, 1::integer)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function ROUNDDOWN({fld1}, 1) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CAST(FLOOR(\`column_a\` * POWER(10, 1)) / POWER(10, 1) AS REAL)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function ROUNDUP({fld1}, 2) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CEIL("column_a"::numeric * POWER(10, 2::integer)) / POWER(10, 2::integer)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function ROUNDUP({fld1}, 2) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CAST(CEIL(\`column_a\` * POWER(10, 2)) / POWER(10, 2) AS REAL)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function SQRT({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "SQRT("column_a"::numeric)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function SQRT({fld1}) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "SQRT(\`column_a\`)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Numeric Functions > should convert numeric function VALUE({fld2}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": ""column_b"::numeric",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function AND({fld5}, {fld1} > 0) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld5",
    "fld1",
  ],
  "sql": "("column_e" AND ("column_a" > 0))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function AND({fld5}, {fld1} > 0) for SQLite 1`] = `
{
  "dependencies": [
    "fld5",
    "fld1",
  ],
  "sql": "(\`column_e\` AND (\`column_a\` > 0))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function ARRAY_COMPACT({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "ARRAY(SELECT x FROM UNNEST("column_a") AS x WHERE x IS NOT NULL)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function ARRAY_FLATTEN({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "ARRAY(SELECT UNNEST("column_a"))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function ARRAY_JOIN({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "ARRAY_TO_STRING("column_a", ', ')",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function ARRAY_JOIN({fld1}, " | ") for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "ARRAY_TO_STRING("column_a", ' | ')",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function ARRAY_UNIQUE({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "ARRAY(SELECT DISTINCT UNNEST("column_a"))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function AUTO_NUMBER() for PostgreSQL 1`] = `
{
  "dependencies": [],
  "sql": "__auto_number",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function AUTO_NUMBER() for SQLite 1`] = `
{
  "dependencies": [],
  "sql": "__auto_number",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function BLANK() for PostgreSQL 1`] = `
{
  "dependencies": [],
  "sql": "NULL",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function BLANK() for SQLite 1`] = `
{
  "dependencies": [],
  "sql": "NULL",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function COUNT({fld1}, {fld2}) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
    "fld2",
  ],
  "sql": "(CASE WHEN \`column_a\` IS NOT NULL THEN 1 ELSE 0 END + CASE WHEN \`column_b\` IS NOT NULL THEN 1 ELSE 0 END)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function COUNT({fld1}, {fld2}, {fld3}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
    "fld2",
    "fld3",
  ],
  "sql": "(CASE WHEN "column_a" IS NOT NULL THEN 1 ELSE 0 END + CASE WHEN "column_b" IS NOT NULL THEN 1 ELSE 0 END + CASE WHEN "column_c" IS NOT NULL THEN 1 ELSE 0 END)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function COUNTA({fld1}, {fld2}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
    "fld2",
  ],
  "sql": "(CASE WHEN \"column_a\" IS NULL OR COALESCE(NULLIF((\"column_a\")::text, ''), '') = '' THEN 0 ELSE 1 END + CASE WHEN \"column_b\" IS NULL OR COALESCE(NULLIF((\"column_b\")::text, ''), '') = '' THEN 0 ELSE 1 END)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function COUNTALL({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CASE WHEN "column_a" IS NULL THEN 0 ELSE 1 END",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function IS_ERROR({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CASE WHEN "column_a" IS NULL THEN TRUE ELSE FALSE END",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function IS_ERROR({fld1}) for SQLite 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CASE WHEN \`column_a\` IS NULL THEN 1 ELSE 0 END",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function NOT({fld5}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld5",
  ],
  "sql": "NOT ("column_e")",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function NOT({fld5}) for SQLite 1`] = `
{
  "dependencies": [
    "fld5",
  ],
  "sql": "NOT (\`column_e\`)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function OR({fld5}, {fld1} < 0) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld5",
    "fld1",
  ],
  "sql": "("column_e" OR ("column_a" < 0))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function OR({fld5}, {fld1} < 0) for SQLite 1`] = `
{
  "dependencies": [
    "fld5",
    "fld1",
  ],
  "sql": "(\`column_e\` OR (\`column_a\` < 0))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function RECORD_ID() for PostgreSQL 1`] = `
{
  "dependencies": [],
  "sql": "__id",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function RECORD_ID() for SQLite 1`] = `
{
  "dependencies": [],
  "sql": "__id",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function TEXT_ALL({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "ARRAY_TO_STRING("column_a", ', ')",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Other Functions > should convert function XOR({fld5}, {fld1} > 0) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld5",
    "fld1",
  ],
  "sql": "(("column_e") AND NOT (("column_a" > 0))) OR (NOT ("column_e") AND (("column_a" > 0)))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function FIND("test", {fld2}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "POSITION('test' IN "column_b")",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function FIND("test", {fld2}) for SQLite 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "INSTR(\`column_b\`, 'test')",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function FIND("test", {fld2}, 5) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "POSITION('test' IN SUBSTRING("column_b" FROM 5::integer)) + 5::integer - 1",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function LEFT({fld2}, 3) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "LEFT("column_b", 3::integer)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function LEFT({fld2}, 3) for SQLite 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "SUBSTR(\`column_b\`, 1, 3)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function LEN({fld2}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "LENGTH("column_b")",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function LEN({fld2}) for SQLite 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "LENGTH(\`column_b\`)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function MID({fld2}, 2, 5) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "SUBSTRING("column_b" FROM 2::integer FOR 5::integer)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function MID({fld2}, 2, 5) for SQLite 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "SUBSTR(\`column_b\`, 2, 5)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function REPLACE({fld2}, 1, 2, "new") for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "OVERLAY("column_b" PLACING 'new' FROM 1::integer FOR 2::integer)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function REPT({fld2}, 3) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "REPEAT("column_b", 3::integer)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function RIGHT({fld2}, 3) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "RIGHT("column_b", 3::integer)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function RIGHT({fld2}, 3) for SQLite 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "SUBSTR(\`column_b\`, -3)",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function SEARCH("test", {fld2}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "POSITION(UPPER('test') IN UPPER("column_b"))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function SEARCH("test", {fld2}) for SQLite 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "INSTR(UPPER(\`column_b\`), UPPER('test'))",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function SUBSTITUTE({fld2}, "old", "new") for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "REPLACE("column_b", 'old', 'new')",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function SUBSTITUTE({fld2}, "old", "new") for SQLite 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "REPLACE(\`column_b\`, 'old', 'new')",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function T({fld1}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld1",
  ],
  "sql": "CASE WHEN "column_a" IS NULL THEN '' ELSE "column_a"::text END",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function TRIM({fld2}) for PostgreSQL 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "TRIM("column_b")",
}
`;

exports[`Generated Column Query End-to-End Tests > Comprehensive Function Coverage Tests > All Text Functions > should convert text function TRIM({fld2}) for SQLite 1`] = `
{
  "dependencies": [
    "fld2",
  ],
  "sql": "TRIM(\`column_b\`)",
}
`;
